--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,4 @@
-elasticsearch.clustername = elasticsearch
-elasticsearch.host = localhost
-elasticsearch.port = 9300
-
-logging.level.org.springframework = DEBUG
+elasticsearch.clustername = ${ES_CLUSTER_NAME}
+elasticsearch.host = ${ES_HOST}
+elasticsearch.port = ${ES_PORT}
 
