--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,22 @@
 version: '3.1'
 services:
+  elasticsearch:
+    image: souhmaa/es
+    privileged: true
+    ports:
+      - "9200:9200"
+      - "9300:9300"
+    volumes:
+      - v_elasticsearch:/usr/share/elasticsearch/data
   elasticsearch-example-client:
     build: .
+    depends_on:
+      - "elasticsearch"
     environment:
       - ES_CLUSTER_NAME=elasticsearch
-      - ES_HOST=els_elasticsearch_1
+      - ES_HOST=elasticsearch
       - ES_PORT=9300
     # entrypoint: tail -f /etc/hosts
+
+volumes:
+  v_elasticsearch:
