--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-elasticsearch.clustername = ${ES_CLUSTER_NAME}
-elasticsearch.host = ${ES_HOST}
-elasticsearch.port = ${ES_PORT}
+elasticsearch.clustername = ${ES_CLUSTER_NAME:elasticsearch}
+elasticsearch.host = ${ES_HOST:localhost}
+elasticsearch.port = ${ES_PORT:9300}
 
